[gd_scene load_steps=17 format=2]

[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/mapPack_tilesheet.png" type="Texture" id=2]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/ZoomBottomMid.png" type="Texture" id=3]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/ZoomBottomLeft.png" type="Texture" id=4]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/ZoomBottomRight.png" type="Texture" id=5]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/buttonBackground.png" type="Texture" id=6]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Images/SideWindow.png" type="Texture" id=7]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scenes/TutorialButtonOS.tscn" type="PackedScene" id=8]
[ext_resource path="res://games/Images/TutorialOS.png" type="Texture" id=9]
[ext_resource path="res://games/Font/GameStartFont.tres" type="DynamicFontData" id=10]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Fonts/anzeigenFont.tres" type="DynamicFont" id=11]
[ext_resource path="res://games/OnlineSeminarMiniGame/Assets/Scenes/StartButtonOS.tscn" type="PackedScene" id=12]
[ext_resource path="res://audios/GamesTheme.ogg" type="AudioStream" id=13]
[ext_resource path="res://audios/SharedSounds/gameover.ogg" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="TileSet" id=2]
0/name = "mapPack_tilesheet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 384, 64, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "mapPack_tilesheet.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 384, 64, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "mapPack_tilesheet.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "mapPack_tilesheet.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 704, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Main" type="Node2D"]
light_mask = 8
script = ExtResource( 1 )

[node name="StartButton" parent="." instance=ExtResource( 12 )]
position = Vector2( 1190, 460 )
z_index = 4

[node name="TutorialButtonOS" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 1240, 35 )
z_index = 4

[node name="TutorialSprite" type="Sprite" parent="."]
position = Vector2( 640, 360 )
z_index = 3
texture = ExtResource( 9 )

[node name="GameStartButton" type="Button" parent="TutorialSprite"]
visible = false
margin_left = -120.0
margin_top = 240.0
margin_right = 123.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 1 )
text = "Spiel starten"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="ButtonsImages" type="Node" parent="."]

[node name="buttonBackground" type="Sprite" parent="ButtonsImages"]
light_mask = 8
position = Vector2( 640, 688 )
scale = Vector2( 1.0125, 0.2 )
z_index = 2
texture = ExtResource( 6 )

[node name="SideWindow" type="Sprite" parent="ButtonsImages"]
light_mask = 8
position = Vector2( 1207.65, 233.927 )
scale = Vector2( 0.565217, 0.565217 )
z_index = 2
texture = ExtResource( 7 )

[node name="ZoomBottomLeft" type="Sprite" parent="ButtonsImages"]
light_mask = 8
position = Vector2( 141.483, 685.75 )
scale = Vector2( 0.634454, 0.634454 )
z_index = 2
texture = ExtResource( 4 )

[node name="ZoomBottomMid" type="Sprite" parent="ButtonsImages"]
light_mask = 8
position = Vector2( 701.483, 685.75 )
scale = Vector2( 0.619749, 0.619749 )
z_index = 2
texture = ExtResource( 3 )

[node name="ZoomBottomRight" type="Sprite" parent="ButtonsImages"]
light_mask = 8
position = Vector2( 1213.48, 685.75 )
scale = Vector2( 0.634454, 0.634454 )
z_index = 2
texture = ExtResource( 5 )

[node name="Node2D" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Node2D"]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, 65535, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 196607, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 327679, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 393215, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 458751, 3, 0, 393216, 3, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 3, 0, 524287, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 589823, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 655359, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 720895, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 786431, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0 )

[node name="Button" type="Button" parent="."]
margin_left = 7.0
margin_top = 625.0
margin_right = 99.0
margin_bottom = 645.0
text = "GAME DONE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 411.816
margin_top = 205.617
margin_right = 880.816
margin_bottom = 273.617
custom_colors/font_color = Color( 1, 0.32549, 0.32549, 1 )
custom_fonts/font = ExtResource( 11 )
text = "MEETING BEENDET"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -30.0
autoplay = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[connection signal="pressed" from="TutorialSprite/GameStartButton" to="." method="_on_GameStartButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
